# football-manager-slms

./: README.md  pyproject.toml
docs/: thoughts.md
fine_tuning/: dataset_preparation.py  training.py
fine_tuning/data/: training_dataset.jsonl
football_manager/commenting_agent/: agent.py  prompts.py  tools.py
football_manager/management_agent/: agent.py  prompts.py  tools.py
football_manager/supervisor_agent/: agent.py  prompts.py  tools.py
